# ci2-mark1-ui

./: .clang-format  .gitignore  README.md
etc/dummy/: almex_device_test_request_test_topic.json
etc/json/: ui_hotel_screen_transition.json
etc/yaml/: ui_hotel_setting.yaml
ui/common/: source.cmake
ui/hotel/: CMakeLists.txt  language.js  main.cpp  qml.qrc  resource.qrc  source.cmake
ui/hotel/qml/: Main.qml
ui/hotel/qml/views/: m0_0_0_InitPage.qml  te0_0_1_TestIdle.qml
ui/hotel/src/views/: m0_0_0_initpage.cpp  m0_0_0_initpage.h  sf0_0_initpage.cpp  sf0_0_initpage.h  sf2_11_reservationbyphone.cpp  sf2_11_reservationbyphone.h  sf2_1_idle.cpp  sf2_1_idle.h  sf2_2_termsandconditions.cpp  sf2_2_termsandconditions.h  sf2_3_checkinselection.cpp  sf2_3_checkinselection.h  sf2_4_reservationbynumber.cpp  sf2_4_reservationbynumber.h  sf2_5_reservationbyname.cpp  sf2_5_reservationbyname.h  sf2_6_reservationbyqr.cpp  sf2_6_reservationbyqr.h  sf2_7_reservationbyprecard.cpp  sf2_7_reservationbyprecard.h  sf2_8_reservationbyictag.cpp  sf2_8_reservationbyictag.h  te0_0_1_testidle.cpp  te0_0_1_testidle.h
ui/hotel/translations/: hotel_en.ts  hotel_fr.ts  hotel_ja.ts  hotel_ko.ts  翻訳対象一覧のtsを作成する.bat
ui/hotel/view/: Constants.qml  mainView.qml
ui/hotel/view/common/background/: BackgroundBase.qml
ui/hotel/view/common/base/: BaseButton.qml  BaseImage.qml  BaseLabel.qml  BaseScrollBar.qml  BaseText.qml
ui/hotel/view/common/button/: CancelButton.qml  ConfirmButton.qml  FlatButton.qml  GradientButton.qml  KeyBoardButton.qml  LanguageButton.qml  MenuButton.qml  MenuButtonGridview.qml  NextButton.qml  OptionButton.qml  OptionButtonGridview.qml  PrevButton.qml  SolidButton.qml  VideoButton.qml
ui/hotel/view/common/contents/: Content.qml  MainContent.qml
ui/hotel/view/common/debug/: DebugButton.qml  DebugLabel.qml
ui/hotel/view/common/parts/: DefaultTextField.qml  Footer.qml  Header.qml  KeyboardPopup.qml  LanguageButtonList.qml  ProgressCircle.qml  ScrollContent.qml
ui/hotel/view/common/text/: DefaultText.qml  NowDateTimeText.qml  TitleText.qml
ui/hotel/view/pages/: SF0-0_InitPage.qml  SF2-11_ReservationByPhone.qml  SF2-1_Idle.qml  SF2-2_TermsAndConditions.qml  SF2-3_CheckInSelection.qml  SF2-4_ReservationByNumber.qml  SF2-5_ReservationByName.qml  SF2-6_ReservationByQR.qml  SF2-7_ReservationByPreCard.qml  SF2-8_ReservationByICTag.qml
ui/hotel/view/sample/: Sample1.qml  Sample2.qml  Sample3.qml
(+23 files in other folders)
